--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,9 @@
 [pytest]
-log_format = %(asctime)s %(levelname)s %(message)s
-log_date_format = %Y-%m-%d %H:%M:%S
-log_file = logs/pytest-logs.txt
-log_file_level = INFO
+addopts = -p no:warnings --alluredir allure-report --verbose
+
+markers =
+    positive
+    negative
+    smoke
+    add
+    delete
