--- a/pytest.ini
+++ b/pytest.ini
@@ -2,8 +2,8 @@
 addopts = -p no:warnings --alluredir allure-report --verbose
 
 markers =
-    positive
-    negative
-    smoke
-    add
-    delete
+    positive: positive tests
+    negative: negative tests
+    smoke: smoke tests
+    add: test method likes.add
+    delete: test method likes.delete
