--- a/tests/test_add_like_multiply_type.yaml
+++ b/tests/test_add_like_multiply_type.yaml
@@ -1,11 +1,13 @@
+#Здесь необходимо вбить свои тестовые данные: тип и айди поста
+
   - !!python/tuple ["post", 1283]
-#  - !!python/tuple ["comment",1242]
-#  - !!python/tuple ["photo",457242073]
-#  - !!python/tuple ["audio",456239153]
-#  - !!python/tuple ["video",456239153]
-#  - !!python/tuple ["note",000]
-#  - !!python/tuple ["market",000]
-#  - !!python/tuple ["photo_comment",000]
-#  - !!python/tuple ["video_comment",000]
-#  - !!python/tuple ["topic_comment",000]
-#  - !!python/tuple ["market_comment",000]
+  - !!python/tuple ["comment",1242]
+  - !!python/tuple ["photo",457242073]
+  - !!python/tuple ["audio",456239153]
+  - !!python/tuple ["video",456239153]
+  - !!python/tuple ["note",000]
+  - !!python/tuple ["market",000]
+  - !!python/tuple ["photo_comment",000]
+  - !!python/tuple ["video_comment",000]
+  - !!python/tuple ["topic_comment",000]
+  - !!python/tuple ["market_comment",000]
